feat: added for supplier and made adjustments due to delivery changes